--- a/styles/style.css
+++ b/styles/style.css
@@ -34,9 +34,7 @@
 section>div{
     margin-top: 85px;
 }
-.margin-left{
-    margin-left: 73px;
-}
+
 .quick-list-features{
     font-size: 3rem;
 }
@@ -97,9 +95,49 @@ section>div{
 .align-center{
     align-items: center;
 }
+
 .features-color{
     color: rgba(255, 144, 14, 1);
 }
+.margin-left{
+    margin-left: 73px;
+}
+/* some facts */
+.facts-content{
+
+    margin-bottom: 50px;
+    margin-left: 240px;
+}
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+   
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600px;
+    margin-top: 5px;
+}
+.fact-description{
+    max-width: 540px;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar,.nav-link{
