added sponsor section and make it responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,9 @@
 }
 section>div{
     margin-top: 85px;
+    
 }
+
 
 .quick-list-features{
     font-size: 3rem;
@@ -104,9 +106,9 @@ section>div{
 }
 /* some facts */
 .facts-content{
-
-    margin-bottom: 50px;
-    margin-left: 240px;
+    max-width: 1440px;
+    margin: 50px auto;
+    
 }
 .facts-container{
     display: grid;
@@ -138,6 +140,21 @@ section>div{
     max-width: 540px;
 }
 
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin:50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr)
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar,.nav-link{
@@ -157,6 +174,16 @@ section>div{
         margin-left: 20px;
     }
 
+    /* some facts */
+    .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+        justify-items:center;
+        gap: 50px;
+    }
 }
 
 /* medium size device */
@@ -171,6 +198,11 @@ section>div{
     }
     .quick-list-features{
         margin: 20px auto;
+    }
+    /* sponsor companies related */
+    .sponsor-companies{
+        justify-items:center;
+        gap: 50px;
     }
     
 }
