--- a/styles/style.css
+++ b/styles/style.css
@@ -153,11 +153,53 @@ section>div{
 .sponsor-companies img{
     filter: grayscale(100%);
 }
+/* features section related styles */
+.features-will-love{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card, .feature-title{
+    font-weight: 600px;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+   
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500px;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700px;
+}
 
+/* footer related styles */
+.bg-footer-color{
+    background-color: rgba(255, 244, 231, 1);
+    height: 100px;
+    border-radius: 8px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar,.nav-link{
+    .navbar,.nav-link,.features-will-love{
         flex-direction: column;
     }
 
@@ -173,6 +215,16 @@ section>div{
     .margin-left{
         margin-left: 20px;
     }
+
+    /* featured will love */
+    .featured-img img{
+        width: 100%;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 10px;
+    }
+    
 
     /* some facts */
     .facts-container{
