--- a/styles/style.css
+++ b/styles/style.css
@@ -111,8 +111,10 @@ section>div{
     
 }
 .facts-container{
+    
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    margin-left: 60px;
    
 }
 .fact-card{
@@ -231,10 +233,15 @@ section>div{
         grid-template-columns: repeat(1, 1fr);
         justify-content: center;
         gap: 24px;
+        margin-left: 15px;
         
     }
     .fact-card{
         margin:0 auto;
+    }
+    .fact-icon{
+        width:20%;
+        margin-top: 40px;
     }
     .sponsor-companies{
         justify-items:center;
@@ -255,6 +262,18 @@ section>div{
     .quick-list-features{
         margin: 20px auto;
     }
+    .facts-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+        padding: 30px;
+        
+    }
+    .fact-icon{
+        width: 20%;
+        margin-top: 40px;
+    }
+    
     
     /* sponsor companies related */
     .sponsor-companies{
